# Machine_Learning_repos

./: .gitattributes  LICENSE  README.md  pyproject.toml
Deep_Learning_Specialization/Course_1/Week_2/W2A1/: Python_Basics_with_Numpy.ipynb  Python_Basics_with_Numpy.py
Deep_Learning_Specialization/Course_1/Week_2/W2A2/: Logistic_Regression_with_a_Neural_Network_mindset.py
Deep_Learning_Specialization/Course_1/Week_3/: Planar_data_classification_with_one_hidden_layer.py
Deep_Learning_Specialization/Course_1/Week_4/W4A1/: Building your Deep Neural Network: Step by Step.py
Deep_Learning_Specialization/Course_1/Week_4/W4A2/: Deep Neural Network - Application.py
Deep_Learning_Specialization/Course_2/Week_1/W1A1/: Initialization.py
Deep_Learning_Specialization/Course_2/Week_1/W1A2/: Regularization.py
Deep_Learning_Specialization/Course_3/: README.md
Deep_Learning_Specialization/Course_4/Week_4/W4A2/: README.md  (+1 more)
Deep_Learning_Specialization/Course_5/: README.md
Machine-Learning-Specialization/Course_1/Week_1/: Gradient_Descent_for_Linear_Regression.py
Machine-Learning-Specialization/Course_1/Week_2/: Regularized_lin._regre.py
Machine-Learning-Specialization/Course_1/Week_3/: Logistic_regression.py  multi-feature_predict(Regression).py
Machine-Learning-Specialization/Course_2/Week_1/: Neural_Networks_(Binary).py
Machine-Learning-Specialization/Course_2/Week_2/: Neural_Networks_(Multiclass_example).py
Machine-Learning-Specialization/Course_3/Week_1/: K-means_Clustering.py
Machine-Learning-Specialization/Course_3/Week_3/: Reinforcement_Learning.py
(+151 files in other folders)
