[tool.poetry]
name = "Machine-Learning-Specialization-by-Andrew-NG"
version = "0.1.0"
description = ""
authors = ["Tiago Reis <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "1.23.0"
matplotlib = "3.6.0"
lab-utils = "0.5.12"
psycopg2 = "^2.9"
pandas = "1.5.0"
tensorflow = "2.10.0"
scikit-learn = "1.1.2"
gym = "0.7.4"
pyvirtualdisplay = "3.0"
imageio = "2.22.4"
ipython = "8.6.0"
statsmodels = "0.13.5"
# tabulate = "0.9.0"
# pickle5 = "0.0.12"
networkx = "2.8.8"
# ipywidgets = "8.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"